--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version: '20.11.1'
       - name: Export site
-        run: npm rune export
+        run: npm run export
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
