--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20.11.1'
+      - name: Install dependencies
+        run: npm install
       - name: Export site
         run: npm run export
       - name: Setup Pages
